--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <pre><p>Home     Category</p></pre>
     </header>
     <h1>The Power of AI</h1>
-    <img src="/images/ai.jpg" alt="AI">
+    <a href="http://127.0.0.1:5500/images/ai.jpg" alt="AI" target="_blank">
+        <img src="/images/ai.jpg" alt="AI"> </a>
+    <a href="http://127.0.0.1:5500/images/ai.1.jpg" alt="AI" target="_blank">
+        <img src="./images/ai.1.jpg" height="235px" alt="AI"> </a>
+        <a href="http://127.0.0.1:5500/images/ai.3.jpg" alt="AI" target="_blank">
+        <img src="./images/ai.3.jpg" height="235px" alt="AI"></a>
     <br>
-    <b>Artificial intelligence</b>
+    <pre>    <b>Artificial intelligence</b>                     <b>Ability</b>                             <b>Power</b>
+    </pre>
     <br>
     <hr>
     <i>This is italic</i>
@@ -39,8 +45,8 @@
             AI = Artificial Intelligence
             <article>Artificial Intelligence (AI) is a branch of computer science focused on creating systems or
                 machines that can perform tasks that typically require human intelligence.</article>
-            <a href="https://chatgpt.com/c/675daabc-88ac-8010-a0a3-5cfdd8c7526a " target="_main"><img
-                    src="/images/chatgpt.png" alt="logo" height="60px"></a>
+            <a href="https://chatgpt.com/ " target="_main"><img src="/images/chatgpt.png" alt="logo" height="60px"></a>
+
             <hr>
         </section>
         <section>
@@ -137,20 +143,31 @@
 
         <textarea name="Feedback" id="08" placeholder="Write your messages"> </textarea>
     </form>
-    <br><br><hr>
-    <h3>Basics of HTML</h3>
-    <iframe src="https://www.youtube.com/embed/HcOc7P5BMi4?si=uN25gpgpKxiv4BA3" title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
     <hr>
-    <video width="560" height="315" src="/images/आयो कर्णाली - KARNALI YAKS ANTHEM .mp4" alt="npl song" controls loop></video>
+    <pre><h3>          Basics of HTML                        Basic to Advance CSS</h3></pre>
+    <h1> <iframe src="https://www.youtube.com/embed/HcOc7P5BMi4?si=uN25gpgpKxiv4BA3" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ESnrn1kAD4E?si=afPIX11vEEo6-spS" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+         encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
+    </h1>
+    <hr>
+    <p> <video width="350px" src="/images/आयो कर्णाली - KARNALI YAKS ANTHEM .mp4" alt="npl song" controls loop></video>
+        <video width="350px" src="./images/Sudurpaschim Royals Anthem song.mp4" alt="npl song" controls loop></video>
 
-
+    </p>
+    <audio controls loop src="./images/Unveiling the official anthem of Biratnagar Kings  Nepal Primer League.mp3"
+        type="audio/mpeg"></audio>
     <footer>This is end of web page is here.</footer>
 </body>
 
-    
+
 </body>
+
 </html>
+
 </html>
