--- a/html/index.html
+++ b/html/index.html
@@ -7,18 +7,23 @@
     <title>First Web Page</title>
 </head>
 <!-- THIS IS HIDDENS-->
+<style>
+    body {
+        background-color: aqua;
+    }
+</style>
 
 <body>
     <header>
         <pre><p>Home     Category</p></pre>
     </header>
-    <h1>The Power of AI</h1>
+    <h1>The Power of AI </h1>
     <a href="http://127.0.0.1:5500/images/ai.jpg" alt="AI" target="_blank">
-        <img src="/images/ai.jpg" alt="AI"> </a>
+        <img src="../images/img/jpg/ai.jpg" alt="AI"/> </a>
     <a href="http://127.0.0.1:5500/images/ai.1.jpg" alt="AI" target="_blank">
-        <img src="./images/ai.1.jpg" height="235px" alt="AI"> </a>
-        <a href="http://127.0.0.1:5500/images/ai.3.jpg" alt="AI" target="_blank">
-        <img src="./images/ai.3.jpg" height="235px" alt="AI"></a>
+        <img src="../images/img/jpg/ai.1.jpg" height="235px" alt="AI"> </a>
+    <a href="http://127.0.0.1:5500/images/ai.3.jpg" alt="AI" target="_blank">
+        <img src="../images/img/jpg/ai.3.jpg" height="235px" alt="AI"></a>
     <br>
     <pre>    <b>Artificial intelligence</b>                     <b>Ability</b>                             <b>Power</b>
     </pre>
@@ -45,7 +50,7 @@
             AI = Artificial Intelligence
             <article>Artificial Intelligence (AI) is a branch of computer science focused on creating systems or
                 machines that can perform tasks that typically require human intelligence.</article>
-            <a href="https://chatgpt.com/ " target="_main"><img src="/images/chatgpt.png" alt="logo" height="60px"></a>
+            <a href="https://chatgpt.com/ " target="_main"><img src="../images/img/png/chatgpt.png" alt="logo" height="60px"></a>
 
             <hr>
         </section>
@@ -65,15 +70,31 @@
         </div>
         <hr>
         <h3>3 biggest IT companies</h3>
+
+        <li>Apple Inc. </li>
+        <ol type="1 " start="1">
+            <li>Founded: April 1, 1976, by Steve Jobs, Steve Wozniak, and Ronald Wayne</li>
+            <li>Headquarters: Cupertino, California, USA</li>
+        </ol>
         <ul>
-            <li>Apple Inc. </li>
-            <ol>
-                <li>Founded: April 1, 1976, by Steve Jobs, Steve Wozniak, and Ronald Wayne</li>
-                <li>Headquarters: Cupertino, California, USA</li>
-            </ol>
             <li>Microsoft</li>
             <li>Amazon</li>
         </ul>
+        <hr>
+        <dl>
+            <dt><b> Math</b></dt>
+            <dd>This is book </dd>
+            <dt><b> Windows</b></dt>
+            <dd> This is windows</dd>
+        </dl>
+        <h3> Programming Languages :-</h3>
+        <ol type="I">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+            <li>Java</li>
+            <li>C</li>
+        </ol>
         <hr>
         <table>
             <thead>
@@ -103,9 +124,9 @@
         <input type="text" placeholder="write your name ">
         <br>
         <br>
-        <input type="password" placeholder="Enter your username or email">
+        <input type="text" placeholder="Enter your username or email">
         <br>
-        <input type="text" placeholder="Enter your password">
+        <input type="password" placeholder="Enter your password">
         <label for="01">
             <input type="radio" value="Male" name="gender" id="01">Male
         </label>
@@ -156,18 +177,17 @@
             allowfullscreen></iframe>
     </h1>
     <hr>
-    <p> <video width="350px" src="/images/आयो कर्णाली - KARNALI YAKS ANTHEM .mp4" alt="npl song" controls loop></video>
-        <video width="350px" src="./images/Sudurpaschim Royals Anthem song.mp4" alt="npl song" controls loop></video>
+    <p> <video width="350px" src="../images/videos/Nepal Premier League/आयो कर्णाली - KARNALI YAKS ANTHEM .mp4" alt="npl song" controls loop></video>
+        <video width="350px" src="../images/videos/Nepal Premier League/Sudurpaschim Royals Anthem song.mp4" alt="npl song" controls loop></video>
 
     </p>
-    <audio controls loop src="./images/Unveiling the official anthem of Biratnagar Kings  Nepal Primer League.mp3"
-        type="audio/mpeg"></audio>
+    <pre>                         <audio controls loop src="./images/music/Unveiling the official anthem of Biratnagar Kings  Nepal Primer League.mp3"
+        type="audio/mpeg"></audio></pre>
     <footer>This is end of web page is here.</footer>
-</body>
+
 
 
 </body>
 
 </html>
 
-</html>
