--- a/html/css.html
+++ b/html/css.html
@@ -12,5 +12,8 @@
     <h2>This is CSS</h2>
     <p>This is unknown color.</p>
     <button>Don't click</button>
+    <br><br>
+    <img height="300px" src="../images/img/jpg/ai.1.jpg" alt="ai">
+    <img height="300px" src="../images/img/jpg/ai.3.jpg" alt="ai">
 
 </body>
